# A-C-language-subset-compiler-with-RISC-V-backend-design

./: CMakeLists.txt  README.md
grammar/: SYSYLexer.g4  SYSYParser.g4
include/: ast_priter.h  ir_priter.cpp  ir_priter.h  threads.s
include/rapidjson/: prettywriter.h
lib/: antlr-4.12.0-complete.jar:Zone.Identifier
src/: main.cpp
src/antlr/: SYSYLexer.cpp  SYSYLexer.h  SYSYLexer.interp  SYSYParser.cpp  SYSYParser.h  SYSYParser.interp  SYSYParser.tokens  SYSYParserBaseListener.cpp  SYSYParserBaseListener.h  SYSYParserBaseVisitor.cpp  SYSYParserBaseVisitor.h  SYSYParserListener.cpp  SYSYParserListener.h  SYSYParserVisitor.cpp  SYSYParserVisitor.h
src/ast/: recognizer.cpp  recognizer.h  syntax_tree.cpp  syntax_tree.h  syntax_tree_builder.cpp  syntax_tree_builder.h
src/backend/: arch.h  backend_pass.cpp  backend_pass.h  code_gen.cpp  code_gen.h  inline_constant.cpp  inst.h  merge_simple_instr.cpp  opt_after_reg_allocate.cpp  program_builder.cpp  program_builder.h  register_allocator.cpp  register_allocator.h  remove_unused_before_alloc.cpp
src/ir/: ir.cpp  ir.h  ir_builder.cpp  ir_builder.h  symbol_table.cpp  symbol_table.h
src/optimize/: array2var.cpp  dce.cpp  def.h  dom_tree.cpp  function_inline.cpp  gcm.cpp  gvn.cpp  loop_unroll.cpp  mem2reg.cpp  pass.cpp  pass.h  recursive_cut_branch.cpp  ssa.cpp  while_true_round.cpp
